--- a/style.css
+++ b/style.css
@@ -1,4 +1,28 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:rgb(8, 8, 8);}
+header { 
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
+    height: 300px;   
+    width: 500px;
+}
+h1{
+    color:rgb(138, 136, 136);
+    margin-bottom: 40px;
+    text-align: center;
+    
+}
+p {
+    margin-left: 50px;
+}
+div {
+    margin-left: 80px;
+    width: 300px;
+}
+footer{
+    font-style: italic;
+}
+button{
+    margin-top: 15px;
+}
 
 
