--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@ header {
     border-radius: 15px;
     height: 300px;   
     width: 500px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top: 40px;
 }
 h1{
     color:rgb(138, 136, 136);
     margin-bottom: 40px;
     text-align: center;
+    padding-top: 20px;
     
 }
 p {
@@ -16,13 +20,17 @@ p {
 }
 div {
     margin-left: 80px;
-    width: 300px;
+    width: 300px;   
 }
 footer{
     font-style: italic;
+    margin-left: 30px;
 }
 button{
     margin-top: 15px;
+}
+#result {
+    color: rgb(246, 250, 16);
 }
 
 
